@@ -1,0 +1,129 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"><head>
+<meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
+<title>Syndie archive</title>
+<style>
+/* style taken from the syndie website */
+body {
+	margin:0px;
+	padding:0px;
+	font-family:verdana, arial, helvetica, sans-serif;
+	color:#333;
+	background-color:white;
+	}
+h1 {
+	margin:0px 0px 15px 0px;
+	padding:0px;
+	font-size:28px;
+	line-height:28px;
+	font-weight:900;
+	color:#ccc;
+	}
+p {
+	font:11px/20px verdana, arial, helvetica, sans-serif;
+	margin:0px 0px 16px 0px;
+	padding:6px;
+	}
+#Content>p {margin:0px;}
+#Content>p+p {text-indent:0px;}
+
+li {
+	font:11px/20px verdana, arial, helvetica, sans-serif;
+	margin:0px 0px 0px 0px;
+	padding:0px;
+}
+a {
+	color:#09c;
+	font-size:11px;
+	text-decoration:none;
+	font-weight:600;
+	font-family:verdana, arial, helvetica, sans-serif;
+	}
+a:link {color:#09c;}
+a:visited {color:#06a;}
+a:hover {background-color:#999999;
+		 color:#FFFFFF;
+		 }
+
+#Header {
+	margin:10px 0px 10px 0px;
+	padding:17px 0px 0px 20px;
+	font-size:11px;
+	/* For IE5/Win's benefit height = [correct height] + [top padding] + [top and bottom border widths] */
+	height:33px; /* 14px + 17px + 2px = 33px */
+	border-style:solid;
+	border-color:black;
+	border-width:1px 0px; /* top and bottom borders: 1px; left and right borders: 0px */
+	line-height:11px;
+	background-color:#eee;
+
+/* Here is the ugly brilliant hack that protects IE5/Win from its own stupidity. 
+Thanks to Tantek Celik for the hack and to Eric Costello for publicizing it. 
+IE5/Win incorrectly parses the "\"}"" value, prematurely closing the style 
+declaration. The incorrect IE5/Win value is above, while the correct value is 
+below. See http://glish.com/css/hacks.asp for details. */
+	voice-family: "\"}\"";
+	voice-family:inherit;
+	height:14px; /* the correct height */
+	}
+/* I've heard this called the "be nice to Opera 5" rule. Basically, it feeds correct 
+length values to user agents that exhibit the parsing error exploited above yet get 
+the CSS box model right and understand the CSS2 parent-child selector. ALWAYS include
+a "be nice to Opera 5" rule every time you use the Tantek Celik hack (above). */
+body>#Header {height:14px;}
+
+#Content {
+	margin:0px 50px 50px 200px;
+	padding:10px;
+	}
+
+#Menu {
+	position:absolute;
+	top:60px;
+	left:20px;
+	width:172px;
+	padding:10px;
+	background-color:#eee;
+	border:1px dashed #999;
+	line-height:17px;
+/* Again, the ugly brilliant hack. */
+	voice-family: "\"}\"";
+	voice-family:inherit;
+	width:150px;
+	}
+/* Again, "be nice to Opera 5". */
+body>#Menu {width:150px;}
+</style>
+</head>
+<body>
+<div style="display: none"><a href="#Content" title="Skip navigation" accesskey="2">Skip navigation</a></div>
+<div id="Header">
+ <a href="http://syndie.i2p.net/index.html" title="Syndie">Syndie</a><i> - distributed forums</i>
+</div>
+<div id="Content">
+<h1>This is a Syndie archive</h1>
+<p>You are viewing a <a href="http://syndie.i2p.net/">Syndie</a> archive,
+containing encrypted and often pseudonymously authored messages.  If you
+install Syndie and tell it to pull this archive's content, you can read
+what is being said, assuming you've got the keys to do so.</p>
+
+<p>The operator of this archive has no control over what is said, and
+can neither monitor nor modify that content.  The operator disclaims any
+responsability for what is included herein.  If you are aware of content
+in this archive that violates the law in the jurisdiction that the archive
+is in, please send a signed affadavit to the archive operator declaring
+such, providing both the full URL to the Syndie post in question, as well
+as any decryption keys necessary to confirm the legitimacy of such a
+claim.</p>
+
+<p>Note, however, that removing content from this one archive does not
+remove it from the forum.  To do so, you would have to find everyone
+who has the content and get them to remove it as well, using whatever
+lawful methods are available in their jurisdiction.  There is no list
+of who has what content, or what archives are used for various forums,
+and there is nothing preventing content from being wrapped up in other
+uncensored posts, or reencrypted with different keys.  Feel free to
+put your finger in the dyke, if it makes you feel better.</p>
+</div>
+</body>
+</html>
